[package]
name = "jetty"
version = "0.1.0"
authors = ["Alcibiades <alcibiades.eth@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.1.0"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
# TODO(Config breaks TryFrom between 0.11 -> 0.13, violating semantic versioning)
config = { version = "0.11", default-features = false, features = ["yaml"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = "0.4.19"
log = "0.4.17"
time = "0.2.23"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-actix-web = "0.5.1"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde-aux = "3.0.1"
ethers = "0.13.0"
serde_json = "1.0.81"

# TODO(sqlx breaks connect_timeout on minor version upgrade, violating semantic versioning)
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2.7.0"
once_cell = "1.12.0"
serde_json = "1.0.81"